testdata/baselines/reference/submodule/conformance/jsDeclarationsReusesExistingTypeAnnotations.errors.txt
index.js(83,9): error TS7032: Property 'p1' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
index.js(83,12): error TS7006: Parameter 'value' implicitly has an 'any' type.
index.js(88,9): error TS7032: Property 'p2' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
index.js(88,12): error TS7006: Parameter 'value' implicitly has an 'any' type.
index.js(93,9): error TS7032: Property 'p3' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
index.js(93,12): error TS7006: Parameter 'value' implicitly has an 'any' type.
index.js(98,9): error TS7032: Property 'p4' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
index.js(98,12): error TS7006: Parameter 'value' implicitly has an 'any' type.


==== index.js (8 errors) ====
    class 小1 {
        /** @type {string=} */
        p1 = undefined;
    
        /** @type {string | undefined} */
        p2 = undefined;
    
        /** @type {?string} */
        p3 = null;
    
        /** @type {string | null} */
        p4 = null;
    }
    
    class 小2 {
        /** @type {string=} */
        get p1() {
            return undefined;
        }
    
        /** @type {string | undefined} */
        get p2() {
            return undefined;
        }
    
        /** @type {?string} */
        get p3() {
            return null;
        }
    
        /** @type {string | null} */
        get p4() {
            return null;
        }
    }
    
    
    class 小3 {
        /** @type {string=} */
        get p1() {
            return undefined;
        }
    
        /** @param {string=} value */
        set p1(value) {
            this.p1 = value;
        }
    
        /** @type {string | undefined} */
        get p2() {
            return undefined;
        }
    
        /** @param {string | undefined} value */
        set p2(value) {
            this.p2 = value;
        }
    
        /** @type {?string} */
        get p3() {
            return null;
        }
    
        /** @param {?string} value */
        set p3(value) {
            this.p3 = value;
        }
    
        /** @type {string | null} */
        get p4() {
            return null;
        }
    
        /** @param {string | null} value */
        set p4(value) {
            this.p4 = value;
        }
    }
    
    
    class 小4 {
        /** @param {string=} value */
        set p1(value) {
            ~~
!!! error TS7032: Property 'p1' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
               ~~~~~
!!! error TS7006: Parameter 'value' implicitly has an 'any' type.
            this.p1 = value;
        }
    
        /** @param {string | undefined} value */
        set p2(value) {
            ~~
!!! error TS7032: Property 'p2' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
               ~~~~~
!!! error TS7006: Parameter 'value' implicitly has an 'any' type.
            this.p2 = value;
        }
    
        /** @param {?string} value */
        set p3(value) {
            ~~
!!! error TS7032: Property 'p3' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
               ~~~~~
!!! error TS7006: Parameter 'value' implicitly has an 'any' type.
            this.p3 = value;
        }
    
        /** @param {string | null} value */
        set p4(value) {
            ~~
!!! error TS7032: Property 'p4' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
               ~~~~~
!!! error TS7006: Parameter 'value' implicitly has an 'any' type.
            this.p4 = value;
        }
    }
    